1) Adding BuyOneGetOneFree discount 2) Including mockito to make testing discount service easier 3) Changing to java11 4) Giving product a product id to allow identification (fairly naive may need refactoring later)